<resources>
    <string name="app_name">SharedWallet</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register with email and password</string>
    <string name="action_log_in">LogIn with email and password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="expense_owner_image_description">Shows the initials of the expense owner.</string>
    <string name="expense_item_paid_count">%1$d/%2$d</string>
    <string name="list_expense_menu_add_expense">Add Expense</string>
    <string name="list_expense_menu_search_expense">Search</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_github">Sign in with Github</string>
    <string name="participant_percentage">%1$d</string>
    <string name="add_participant">Add Participant</string>
    <string name="cancel">Cancel</string>
    <string name="create_expense_title">Create new Expense</string>
    <string name="show_expense_title">Information</string>
    <string name="list_expense_title">Expenses</string>
    <string name="list_expense_menu_show_account">Show Account</string>
    <string name="list_expense_menu_log_out">Log Out</string>
    <string name="show_expense_menu_edit">Edit Expense</string>
    <string name="show_expense_menu_remove">Remove Expense</string>
    <string name="show_expense_menu_paid">Paid Expense</string>
    <string name="default_notification_channel_id">Expense News</string>
    <string name="update_account_title">Update Account</string>
    <string name="show_account_title">Account Information</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="show_account_menu_delete">Delete Account</string>
    <string name="create_account_title">Create Account</string>
    <string name="login_account_title">Login</string>
    <string name="update_expense_title">Update Expense</string>
</resources>