<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/show_expense_menu_paid_expense"
        android:icon="@drawable/ic_baseline_check_24"
        android:title="@string/show_expense_menu_paid"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/show_expense_menu_overflow_menu"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/show_expense_menu_edit_expense"
                android:icon="@drawable/ic_baseline_edit_24"
                android:title="@string/show_expense_menu_edit"
                app:iconTint="@color/black"
                android:enabled="false"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/show_expense_menu_remove_expense"
                android:icon="@drawable/ic_baseline_clear_24"
                android:title="@string/show_expense_menu_remove"
                app:iconTint="@color/black"
                app:showAsAction="ifRoom" />
        </menu>
    </item>


</menu>